objects/ssot__PatientMedicationDispense__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterContextId__c</fullName>
        <label>Clinical Encounter Context</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectedById__c</fullName>
        <label>Collected By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectedByObject__c</fullName>
        <label>Collected By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryLocationId__c</fullName>
        <label>Delivery Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryLocationObject__c</fullName>
        <label>Delivery Location Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenseTypeCodeId__c</fullName>
        <label>Dispense Type Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenseTypeCodeObject__c</fullName>
        <label>Dispense Type Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispensedDateTime__c</fullName>
        <label>Dispensed Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityId__c</fullName>
        <label>Healthcare Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Medication Dispense Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubstituted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Substituted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MedAdminSettingCtgyName__c</fullName>
        <label>Med Administration Setting Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedSubstitutionType__c</fullName>
        <label>Medication Substitution Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationCodeObject__c</fullName>
        <label>Medication Code Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationDispenseStatusID__c</fullName>
        <label>Medication Dispense Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationDispenseType__c</fullName>
        <label>Medication Dispense Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationDispensedQuantityUOMId__c</fullName>
        <label>Medication Dispensed Quantity Unit</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationDispensedQuantity__c</fullName>
        <label>Medication Dispensed Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationId__c</fullName>
        <label>Medication</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationStatement__c</fullName>
        <label>Medication Statement</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationcCodeId__c</fullName>
        <label>Medication Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicationRequestId__c</fullName>
        <label>Patient Medication Request</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreparedDateTime__c</fullName>
        <label>Prepared Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionStatusReason__c</fullName>
        <label>Prescription Status Reason</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryDetectedIssueId__c</fullName>
        <label>Primary Detected Issue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryMedicationRequestId__c</fullName>
        <label>Primary Medication Request</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryProcedureId__c</fullName>
        <label>Primary Procedure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDateTime__c</fullName>
        <label>Source System Modified DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCodeId__c</fullName>
        <label>Status Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCodeObject__c</fullName>
        <label>Status Reason Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonRelatedIssueId__c</fullName>
        <label>Status Reason Related Issue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubstitutedById__c</fullName>
        <label>Substituted By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubstitutedByObject__c</fullName>
        <label>Substituted By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubstitutionReasonType__c</fullName>
        <label>Substitution Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupplyDaysCount__c</fullName>
        <label>Supply Days Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725349072_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationDispense_PatientId__rel</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>PatientMedicationDispense_PatientId__rel</relationshipLabel>
        <relationshipName>rel_1716725349072_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725351154_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationDispense_PrimaryPro_rel</label>
        <referenceTo>ssot__PatientMedicalProcedure__dlm</referenceTo>
        <relationshipLabel>PatientMedicationDispense_PrimaryPro_rel</relationshipLabel>
        <relationshipName>rel_1716725351154_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725354094_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationDispense_Substitute_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>PatientMedicationDispense_Substitute_rel</relationshipLabel>
        <relationshipName>rel_1716725354094_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>